talos/maintainerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintainerr
  namespace: maintainerr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: maintainerr.local.asandov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintainerr
                port:
                  number: 80
  tls:
    - hosts:
        - maintainerr.local.asandov.com
      secretName: maintainerr-local-tls
